# i18n-locale-lint

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: create-asset-list.yml  release.yml  run_on_examples.yml
crates/ast/: Cargo.toml
crates/ast/src/: compare.rs  display.rs  lib.rs  value.rs
crates/cli/: Cargo.toml
crates/cli/src/: check.rs  error.rs  files.rs  lib.rs  main.rs  option.rs
crates/json/: Cargo.toml
crates/json/src/: convert.rs  file.rs  lib.rs  parse.rs
crates/yaml/: Cargo.toml
crates/yaml/src/: file.rs  lib.rs  parse.rs
example/: data2.json  data3.json
example/group1/: en.json
example/group2/: ja.json
examples/failure/: package.json
examples/failure/src/locale/post/: en.json
examples/failure/src/locale/user/: ja.json
examples/success/: package.json
examples/success/src/locale/post/: en.json  ja.json
examples/success/src/locale/user/: en.json  ja.json
examples/yaml/: package.json
examples/yaml/src/locale/deep/user/: ja.yml
examples/yaml/src/locale/post/: en.yml  ja.yml
examples/yaml/src/locale/user/: en.yml  ja.yml
scripts/: assets.json  binaryName.js  postinstall.js  prepareRelease.js
src/: check.rs  diff.rs  display.rs  files.rs  is_same_type.rs  main.rs  option.rs
