[package]
name = "json-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-inspector-cli = { path = "./crates/cli" }

[workspace]
resolver = "2"
members = [
    "crates/ast",
    "crates/cli",
    "crates/json"
]
