[package]
name = "i18n-locale-lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "crates/ast",
    "crates/cli",
    "crates/json"
]

[lib]
path = "./crates/cli"
crate-type = ["cdylib", "rlib"]
