[package]
name = "i18n-locale-lint-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
i18n-locale-lint-ast = { path = "../ast" }
i18n-locale-lint-json = { path = "../json" }
getopts = "0.2"
once_cell = "1.19.0"
regex = "1.10.4"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
glob = "0.3.1"
