[package]
name = "i18n_locale_lint_cli"
version = "0.0.0"
edition = "2021"

[dependencies]
i18n_locale_lint_ast = { path = "../ast" }
i18n_locale_lint_json = { path = "../json" }
i18n_locale_lint_yaml = { path = "../yaml" }
getopts = "0.2"
once_cell = "1.19.0"
regex = "1.10.4"

[[bin]]
name = "main"
path = "src/main.rs"
